# zeep-crates-io

./: Cargo.toml
zeep-build-example/: Cargo.toml  build.rs
zeep-build-example/src/: main.rs
zeep-build-example/src/zeep/: hello.rs  mod.rs  tempconverter.rs
zeep-lib/: Cargo.toml
